# repo-template

./: .buildinfo  .gitignore  README.md  api.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  usage.html
_modules/: index.html
_modules/repo_template/: cli.html
_modules/repo_template/cli/: example.html
_modules/repo_template/utils/: aux_funcs.html
_sources/autoapi/repo_template/: index.rst.txt
_sources/autoapi/repo_template/cli/: index.rst.txt
_sources/autoapi/repo_template/cli/example/: index.rst.txt
_sources/autoapi/repo_template/utils/: index.rst.txt
_sources/autoapi/repo_template/utils/aux_funcs/: index.rst.txt
autoapi/repo_template/: index.html
autoapi/repo_template/cli/: index.html
autoapi/repo_template/cli/example/: index.html
autoapi/repo_template/utils/: index.html
autoapi/repo_template/utils/aux_funcs/: index.html
docs/: README.rst  api.rst  conf.py  index.rst  usage.md
doctrees/: api.doctree  environment.pickle  index.doctree  install.doctree  usage.doctree
doctrees/autoapi/repo_template/: index.doctree
doctrees/autoapi/repo_template/cli/: index.doctree
doctrees/autoapi/repo_template/cli/example/: index.doctree
doctrees/autoapi/repo_template/utils/: index.doctree
doctrees/autoapi/repo_template/utils/aux_funcs/: index.doctree
repo_template/: __init__.py  example.py
repo_template/cli/: __init__.py  example.py  print_fonts.py
repo_template/utils/: aux_funcs.py  foo.ipynb
